# timedomain-taxonomy

./: .travis.yml  LICENSE  MANIFEST.in  README.md  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: test_code.yaml  test_pr.yaml
tdtax/: __init__.py  binary.yaml  cataclysmic.yaml  eclipsing.yaml  eruptive.yaml  nonstellar.yaml  phenomenological.yaml  pulsating.yaml  rotating.yaml  schema.json  supernovae.yaml  tdclass.yaml  top.yaml  util.py  validate.py  viz_template.html
tdtax/test/: bad.yaml  test_class_yaml.py  test_validate.py
