[aliases]
test=pytest
dists = sdist bdist_wheel

[bdist_wheel]
universal=0

[coverage:run]
source = tdtax
omit = tdtax/test/*
parallel = True
concurrency =
    thread

[metadata]
name = tdtax
license = BSD 3-Clause
license_files =
    LICENSE
author = Josh Bloom
author_email = joshbloom@berkeley.edu
url = http://pypi.python.org/pypi/tdtax/
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: POSIX
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet
    Topic :: Scientific/Engineering :: Astronomy


[options]
packages = find:
python_requires = >=3.6
install_requires =
    jsonschema
    pyyaml
tests_require =
    pytest

[test]
# py.test options when running `python setup.py test`
addopts = --verbose
extras = True

[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts =
    --cov=tdtax --cov-config .coveragerc --cov-report term-missing
    --verbose --cov-report xml:coverage.xml
norecursedirs =
    dist
    build
    .tox
testpaths =
    tdtax/test

[flake8]
exclude =
    .tox
    build
    dist
    .eggs